[metadata]
name = "zfit_physics"
long_description = file: README.rst
long_description_content_type = text/x-rst
author = "zfit"
author_email = "zfit@physik.uzh.ch"
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.6

[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:zfit_physics/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude =
    docs,
    examples,
    dist,
    building,
    build,
    legacy,
    utils
max-line-length = 110
statistics = True
max-complexity = 30

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88
