[metadata]
name = zfit_physics
description = Physics extension to zfit
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/zfit/zfit-physics
author = zfit
author_email = zfit@physik.uzh.ch
maintainer = zfit
maintainer_email = zfit@physik.uzh.ch
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Physics
keywords = TensorFlow, model, fitting, scalable, HEP, physics

[options]
python_requires = >=3.9

[bdist_wheel]
universal = 1

[flake8]
exclude =
    docs,
    examples,
    dist,
    building,
    build,
    legacy,
    utils
max-line-length = 120
statistics = True
max-complexity = 30

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 120
